Fix canvas tooltip z-index

--- a/#src/scss/_pool_Info.scss
+++ b/#src/scss/_pool_Info.scss
@@ -195,6 +195,8 @@
 
 // Стили для кольцевой диаграммы
 
+canvas#chart{position:relative; z-index:1;}
+
 .chart-container {
     position: relative;
     height: 191px;
